# Gangrene

./: .bandit.yaml  .bumpversion.cfg  .cspell.txt  .default.code-workspace  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.cspell/: dictionary.txt
gangrene/: __init__.py  main_module.py
gangrene/submodule1/: __init__.py  helper.py
gangrene/submodule2/: __init__.py  processor.py
tests/: __init__.py  test_main_module.py  test_submodule1.py  test_submodule2.py
